tests/baselines/reference/promiseTypeInferenceUnion.errors.txt
promiseTypeInferenceUnion.ts(2,10): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
promiseTypeInferenceUnion.ts(6,10): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
promiseTypeInferenceUnion.ts(10,10): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
promiseTypeInferenceUnion.ts(13,29): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
promiseTypeInferenceUnion.ts(14,29): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
promiseTypeInferenceUnion.ts(15,29): error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.


==== promiseTypeInferenceUnion.ts (6 errors) ====
    function f1(x: number): number | Promise<number> {
      return Promise.resolve(x);
             ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
    }
    
    function f2(x: number): number | PromiseLike<number> {
      return Promise.resolve(x);
             ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
    }
    
    function f3(x: number): number | Promise<number> | PromiseLike<number> {
      return Promise.resolve(x);
             ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
    }
    
    const g1: Promise<number> = Promise.resolve(f1(42));
                                ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
    const g2: Promise<number> = Promise.resolve(f2(42));
                                ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
    const g3: Promise<number> = Promise.resolve(f3(42));
                                ~~~~~~~
!!! error TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.